<resources>
    <string name="app_name">Yatzy score</string>
    <string name="aces">Aces</string>
    <string name="twos">Twos</string>
    <string name="threes">Threes</string>
    <string name="fours">Fours</string>
    <string name="fives">Fives</string>
    <string name="sixes">Sixes</string>
    <string name="_4_of_a_kind">4 of a kind</string>
    <string name="_3_of_a_kind">3 of a kind</string>
    <string name="full_house">Full house</string>
    <string name="small_strt">Small strt</string>
    <string name="yahtzee">Yahtzee</string>
    <string name="large_strt">Large Strt</string>
    <string name="chance">Chance</string>
    <string name="Total">Total: %d</string>
    <string name="name_message">Please enter a name for multiplayer. If you don\'t enter a name, multiplayer will not work.</string>
    <string name="clear_all_save">Clear all / save</string>
    <string name="bonus">Bonus</string>
    <string name="change_nickname">Change nickname</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="left">Left: %d</string>
    <string name="right">Right: %d</string>
    <string name="No_players_nearby">No players nearby. Touch to manually add a player.</string>
    <string name="name">Name</string>
    <string name="previous_scores">Saved scores</string>
    <string name="saved_scores">Saved scores</string>
    <string name="remove_score">Remove score</string>
    <string name="remove_player">Remove Player</string>
    <string name="discovered_players">Discovered players</string>
    <string name="remove">Remove</string>
    <string name="average_d">Average: %.1f</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="settings">Settings</string>
    <string name="rules">Rules</string>
    <string name="enable_multiplayer">Enable multiplayer</string>
    <string name="multiplayer_permission_dialog">To automatically discover players nearby the app needs Nearby permissions.</string>
    <string name="yahtzee_bonus">Yahtzee bonus</string>
    <string name="press_again">Press again to enter 0</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="total_games_played">Games played: %d</string>
    <string name="cancel">Cancel</string>
    <string name="stats">Stats</string>
    <string name="export_scores">Export scores</string>
    <string name="import_scores">Import scores</string>
    <string name="average_score">Average score</string>
    <string name="help">Help</string>
    <string name="average_scores_of_all_your_saved_games">Average scores of all your saved games</string>
    <string name="percentage_of_games_this_field_was_filled">Percentage of games this field was filled</string>
    <string name="you_can_view_stats_of_all_your_saved_games">You can view stats of all your saved games.</string>
    <string name="don_t_show_this_again">Don\'t show this again</string>
    <string name="games_hidden">The first %d games have been omitted from the graph</string>
    <string name="save_score">Save score</string>
    <string name="browser_fail">Unable to open web browser</string>
    <string name="score_too_low_save">You can only save scores higher than 5</string>
    <string name="clear_all">Clear all</string>
    <string name="clear">Clear</string>
    <string name="add_player">Add player</string>
    <string name="average_score_of_last">Average score of last %d games</string>
    <string name="average_score_of_last_ma">Moving average (15 games)</string>
    <string name="_1_4_81" translatable="false">1.4(81)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_score">Sort by score</string>
    <string name="nearby">Nearby:</string>
    <string name="score_nearby_unavailable">The score of this player is not yet available. Try again while playing the game.</string>
    <string name="licenses">Licenses</string>
    <string name="score_not_save_conf">Are you sure you don\'t want to save this score?</string>
    <string name="bonus_value" translatable="false">0 (%d)</string>
    <string name="change_setting">You can change this later in the settings</string>
    <string name="about">About</string>
    <string name="scan_qr_code">Scan the qr code from a different device to manually add a player.</string>
    <string name="show_qr_code">Show this qr code to another player to manually add a player to their device</string>
    <string name="choose_rules">Choose which rules you want to use</string>
    <string name="welcome_to_yatzy_score">Welcome to Yatzy score</string>
    <string name="multiplayer_question">Do you want to enable multiplayer?</string>
    <string name="app_icon">App icon</string>
    <string name="other">Other</string>
    <string name="update_available_long">An update for the app is available. You are advised to update the app.</string>
    <string name="stats_dialog_setting">Stats dialog after game</string>
    <string name="games_played">Games played</string>
    <string name="average_difference">Average (difference)</string>
    <string name="total_score_today">Total score</string>
    <string name="game_stats">Game stats</string>
    <string name="average_difference_today">Difference average</string>
    <string name="today">Today</string>
    <string name="close">Close</string>
    <string name="nearby_permission_exp">The app will show a popup to give these permissions.</string>
    <string name="open_app">Open app</string>
    <string name="multiplayer_with_nearby_players">Multiplayer with nearby players</string>
    <string name="next">Next</string>
    <string name="username_required_error">Username is required</string>
    <string name="username_for_multiplayer">Username for multiplayer</string>
    <string name="yatzy">Yatzy</string>
    <string name="one_pair">One pair</string>
    <string name="two_pairs">Two pairs</string>
    <string name="name_required_error">An username is required if multiplayer is enabled</string>
    <string name="username">Username</string>
    <string name="select_game_type">Select a game type</string>
    <string name="view_rules_game">View rules of selected game</string>
    <string name="yahtzee_bonus_select_text">Yahtzee rules with an extra field to score Yahtzee multiple times.</string>
    <string name="color_left_side_summary">Change color if score is lower or higher than the required amount to reach the bonus</string>
    <string name="colors_left_side">Colors left side</string>
    <string name="manual_add_player_description">Enter the username of the player to add</string>
    <string name="show_code">Show code</string>
    <string name="scan_code">Scan code</string>
    <string name="scan_code_description">Scan this code with another device to add the player</string>
    <string name="player_added">Player added</string>
    <string name="nearby_permission_rationale">To automatically discover players in the same room the app needs nearby permissions. The app will now request permission to use nearby.</string>
    <string name="nearby_permissions">Nearby permissions</string>
    <string name="camera_permission">Camera permission</string>
    <string name="camera_permissions_denied_dialog">Camera permissions have been denied. It is not possible to add players manually without camera permissions.</string>
    <string name="update_available">Update available</string>
</resources>
